k3s/manifests/stalwart/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stalwart
  labels:
    app.kubernetes.io/managed-by: argocd
