k3s/manifests/stalwart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stalwart
  namespace: stalwart
spec:
  type: ClusterIP
  selector:
    app: stalwart
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: smtp
      port: 587
      targetPort: 587
    - name: imap
      port: 993
      targetPort: 993
